CMPE 50 labs/C-workspace/.metadata/.plugins/org.eclipse.cdt.ui/Tax_Calculator.build.log
20:06:53 **** Incremental Build of configuration Debug for project Tax_Calculator ****
make all 
Building file: ../src/Tax_Calculator.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Tax_Calculator.d" -MT"src/Tax_Calculator.d" -o "src/Tax_Calculator.o" "../src/Tax_Calculator.cpp"
../src/Tax_Calculator.cpp:17:2: error: expected expression
        template<typename stl> void Calculate_Tax(stl &a, stl &b);
        ^
1 error generated.
make: *** [src/Tax_Calculator.o] Error 1

20:06:54 Build Finished (took 313ms)

